--- a/blogs.html
+++ b/blogs.html
@@ -80,86 +80,86 @@
             any measure of “success,” investment in IT must be accompanied by significant changes in business operations
             and processes and changes in management culture, attitudes, and behavior. Absent these changes, investment
             in IT can be a waste of precious investor resources. </p>
-        <h1​ class="article header">បកប្រែ</h1>
-            <h1 class="article header">ករណីទី១៖</h1>
-            <h2 class="article center-pre-header">មេរៀនទី១៖ តើ IT សំខាន់ប៉ុណ្ណា?</h2>
-            <p class="article paragraph-one">នៅខែឧសភា ឆ្នាំ 2003 លោក Nicholas Carr ដែលជានិពន្ធនាយកនៅ Harvard Business
-                Review
-                បានសរសេរអត្ថបទមួយមានចំណងជើងថា "IT Doesn't Matter"
-                ដែលបានជំរុញឱ្យមានការជជែកពិភាក្សាគ្នាយ៉ាងសំខាន់នៅក្នុងសហគមន៍អាជីវកម្ម។ អំណះអំណាងរបស់ Carr
-                និយាយដោយសង្ខេបគឺដោយសារតែរាល់ fi rm អាចទិញ IT នៅលើទីផ្សារបាន
-                ពីព្រោះអត្ថប្រយោជន៍ណាមួយដែលទទួលបានដោយក្រុមហ៊ុនមួយអាចត្រូវបានចម្លងដោយក្រុមហ៊ុនមួយផ្សេងទៀតយ៉ាងងាយស្រួល
-                ហើយដោយសារតែ IT ឥឡូវនេះគឺជាទំនិញផ្អែកលើស្តង់ដារ (ដូចជាអ៊ីនធឺណិត) ដែល
-                ក្រុមហ៊ុនទាំងអស់អាចប្រើប្រាស់បានដោយសេរី
-                វាលែងជាកត្តាខុសគ្នាក្នុងការអនុវត្តរបស់អង្គភាពទៀតហើយ។ Carr អះអាងថា គ្មាន fi rm ណាអាចប្រើ IT
-                ដើម្បីសម្រេចបាននូវគែមយុទ្ធសាស្ត្រលើដៃគូប្រកួតប្រជែងរបស់ខ្លួន លើសពីអ្វីដែលអាចធ្វើបានជាមួយអគ្គិសនី
-                ទូរស័ព្ទ
-                ឬហេដ្ឋារចនាសម្ព័ន្ធផ្សេងទៀត។ ដូច្នេះហើយ Carr សន្និដ្ឋានថា fi rms គួរតែកាត់បន្ថយការចំណាយលើ IT</p>
-            <p class="article paragraph-one">នៅឆ្នាំ 2013 តើអាគុយម៉ង់របស់ Carr ក្រោកឡើងយ៉ាងដូចម្តេច?
+        <h1 class="article header">បកប្រែដោយ google translation</h1>
+        <h1 class="article header">ករណីទី១៖</h1>
+        <h2 class="article center-pre-header">មេរៀនទី១៖ តើ IT សំខាន់ប៉ុណ្ណា?</h2>
+        <p class="article paragraph-one">នៅខែឧសភា ឆ្នាំ 2003 លោក Nicholas Carr ដែលជានិពន្ធនាយកនៅ Harvard Business
+            Review
+            បានសរសេរអត្ថបទមួយមានចំណងជើងថា "IT Doesn't Matter"
+            ដែលបានជំរុញឱ្យមានការជជែកពិភាក្សាគ្នាយ៉ាងសំខាន់នៅក្នុងសហគមន៍អាជីវកម្ម។ អំណះអំណាងរបស់ Carr
+            និយាយដោយសង្ខេបគឺដោយសារតែរាល់ fi rm អាចទិញ IT នៅលើទីផ្សារបាន
+            ពីព្រោះអត្ថប្រយោជន៍ណាមួយដែលទទួលបានដោយក្រុមហ៊ុនមួយអាចត្រូវបានចម្លងដោយក្រុមហ៊ុនមួយផ្សេងទៀតយ៉ាងងាយស្រួល
+            ហើយដោយសារតែ IT ឥឡូវនេះគឺជាទំនិញផ្អែកលើស្តង់ដារ (ដូចជាអ៊ីនធឺណិត) ដែល
+            ក្រុមហ៊ុនទាំងអស់អាចប្រើប្រាស់បានដោយសេរី
+            វាលែងជាកត្តាខុសគ្នាក្នុងការអនុវត្តរបស់អង្គភាពទៀតហើយ។ Carr អះអាងថា គ្មាន fi rm ណាអាចប្រើ IT
+            ដើម្បីសម្រេចបាននូវគែមយុទ្ធសាស្ត្រលើដៃគូប្រកួតប្រជែងរបស់ខ្លួន លើសពីអ្វីដែលអាចធ្វើបានជាមួយអគ្គិសនី
+            ទូរស័ព្ទ
+            ឬហេដ្ឋារចនាសម្ព័ន្ធផ្សេងទៀត។ ដូច្នេះហើយ Carr សន្និដ្ឋានថា fi rms គួរតែកាត់បន្ថយការចំណាយលើ IT</p>
+        <p class="article paragraph-one">នៅឆ្នាំ 2013 តើអាគុយម៉ង់របស់ Carr ក្រោកឡើងយ៉ាងដូចម្តេច?
 
-                អ្នកជំនាញប្រព័ន្ធព័ត៌មានគ្រប់គ្រង (MIS) ភាគច្រើនមិនយល់ស្របទេ។ ដូចដែលយើងពិភាក្សានៅពេលក្រោយក្នុងជំពូកនេះ
-                និងជំពូកបន្តបន្ទាប់គ្នាពេញសៀវភៅនេះ
-                ការស្រាវជ្រាវបង្ហាញថាមានភាពប្រែប្រួលគួរឱ្យកត់សម្គាល់នៅក្នុងសមត្ថភាពរបស់
-                fi rms ក្នុងការប្រើប្រាស់ IT ប្រកបដោយប្រសិទ្ធភាព។ rms ដែលមានជំនាញខ្ពស់ជាច្រើន
-                បន្តទទួលបានផលចំណេញខ្ពស់លើការវិនិយោគរបស់ពួកគេក្នុងវិស័យ IT ចំណែកក្រុមហ៊ុនដែលមិនសូវជំនាញមិនមាន។
-                ការចម្លងការបង្កើតថ្មីនៃ fi rms ផ្សេងទៀតអាចជាការពិបាកដ៏អាក្រក់ ដោយមានការខាតបង់យ៉ាងច្រើនក្នុងការបកប្រែ។ Th
-                ere
-                គឺមានតែ Google មួយ Wal-Mart មួយ Amazon និង eBay មួយប៉ុណ្ណោះ ហើយ fi rms
-                នីមួយៗទទួលបានអត្ថប្រយោជន៍ប្រកួតប្រជែងនៅក្នុងឧស្សាហកម្មរបស់ខ្លួនដោយផ្អែកលើផ្នែកធំមួយលើវិធីតែមួយគត់នៃការរៀបចំការងារដែលបើកដោយ
-                IT ដែលត្រូវបានប្រើប្រាស់យ៉ាងខ្លាំង។ ពិបាកចម្លង។ ក្រុមហ៊ុន Firms
-                ដ៏មានឥទ្ធិពលជាច្រើនបានព្យាយាមចម្លងក្រុមហ៊ុនលេចធ្លោនីមួយៗដោយមិនជោគជ័យ។ ប្រសិនបើការចម្លងមានភាពងាយស្រួល
-                យើងនឹងរំពឹងថានឹងស្វែងរកការប្រកួតប្រជែងដ៏មានឥទ្ធិពលសម្រាប់អ្នកដឹកនាំទីផ្សារទាំងនេះ។ វាក៏ជាករណីដែល fi rms
-                ទាំងនេះជារឿយៗបានបរាជ័យក្នុងការផ្លាស់ទីចេញពីផលិតផលពិសេសរបស់ពួកគេដោយការយកតម្រាប់តាមអ្នកដទៃ។</p>
-            <p class="article paragraph-one">អ្នកជំនាញប្រព័ន្ធព័ត៌មានគ្រប់គ្រង (MIS) ភាគច្រើនមិនយល់ស្របទេ។
-                ដូចដែលយើងពិភាក្សានៅពេលក្រោយក្នុងជំពូកនេះ និងជំពូកបន្តបន្ទាប់គ្នាពេញសៀវភៅនេះ
-                ការស្រាវជ្រាវបង្ហាញថាមានភាពប្រែប្រួលគួរឱ្យកត់សម្គាល់នៅក្នុងសមត្ថភាពរបស់ fi rms ក្នុងការប្រើប្រាស់ IT
-                ប្រកបដោយប្រសិទ្ធភាព។ rms ដែលមានជំនាញខ្ពស់ជាច្រើន បន្តទទួលបានផលចំណេញខ្ពស់លើការវិនិយោគរបស់ពួកគេក្នុងវិស័យ
-                IT
-                ចំណែកក្រុមហ៊ុនដែលមិនសូវជំនាញមិនមាន។ ការចម្លងការបង្កើតថ្មីនៃ fi rms ផ្សេងទៀតអាចជាការពិបាកដ៏អាក្រក់
-                ដោយមានការខាតបង់យ៉ាងច្រើនក្នុងការបកប្រែ។ Th ere គឺមានតែ Google មួយ Wal-Mart មួយ Amazon និង eBay
-                មួយប៉ុណ្ណោះ
-                ហើយ fi rms
-                នីមួយៗទទួលបានអត្ថប្រយោជន៍ប្រកួតប្រជែងនៅក្នុងឧស្សាហកម្មរបស់ខ្លួនដោយផ្អែកលើផ្នែកធំមួយលើវិធីតែមួយគត់នៃការរៀបចំការងារដែលបើកដោយ
-                IT ដែលត្រូវបានប្រើប្រាស់យ៉ាងខ្លាំង។ ពិបាកចម្លង។ ក្រុមហ៊ុន Firms
-                ដ៏មានឥទ្ធិពលជាច្រើនបានព្យាយាមចម្លងក្រុមហ៊ុនលេចធ្លោនីមួយៗដោយមិនជោគជ័យ។ ប្រសិនបើការចម្លងមានភាពងាយស្រួល
-                យើងនឹងរំពឹងថានឹងស្វែងរកការប្រកួតប្រជែងដ៏មានឥទ្ធិពលសម្រាប់អ្នកដឹកនាំទីផ្សារទាំងនេះ។ វាក៏ជាករណីដែល fi rms
-                ទាំងនេះជារឿយៗបានបរាជ័យក្នុងការផ្លាស់ទីចេញពីផលិតផលពិសេសរបស់ពួកគេដោយការយកតម្រាប់តាមអ្នកដទៃ។</p>
-            <p class="article paragraph-one">ទោះបីជាការធ្លាក់ចុះតម្លៃសម្រាប់ផ្នែករឹង និងសូហ្វវែរ និងស្តង់ដារកុំព្យូទ័រ
-                និងទូរគមនាគមន៍ថ្មី
-                ដូចជាអ៊ីនធឺណិតបានធ្វើឱ្យកម្មវិធីកុំព្យូទ័រសម្រាប់អាជីវកម្មមានភាពងាយស្រួលជាងពេលមុនក៏ដោយ
-                នេះមិនមែនជាសញ្ញានៃការបញ្ចប់នៃការបង្កើតថ្មី ឬចុងបញ្ចប់នៃក្រុមហ៊ុនដែលកំពុងអភិវឌ្ឍគែមយុទ្ធសាស្ត្រដោយប្រើ IT
-                .
-                ឆ្ងាយពីការបញ្ចប់នៃការបង្កើតថ្មី ការផ្លាស់ប្តូរទំនិញតែងតែនាំទៅរកការផ្ទុះឡើងនៃការបង្កើតថ្មី និងទីផ្សារ
-                និងផលិតផលថ្មី។ ជាឧទាហរណ៍ ភាពសម្បូរបែប និងលទ្ធភាពនៃសម្ភារៈដូចជាឈើ កញ្ចក់ និងដែក
-                ក្នុងអំឡុងសតវត្សចុងក្រោយនេះ
-                បានធ្វើឱ្យមានការបន្តនៃការបង្កើតថ្មីនៃស្ថាបត្យកម្ម។ ដូចគ្នានេះដែរ ភាពអាចរកបានយ៉ាងទូលំទូលាយនៃ cloud
-                computing
-                ក្នុងឆ្នាំ 2013 ដែលជាឧទាហរណ៍ដ៏ល្អនៃការគណនាទំនិញកំពុងនាំទៅដល់ផលិតផល និងសេវាកម្មថ្មីៗរាប់ពាន់។</p>
-            <p class="article paragraph-one">ដូចគ្នានេះដែរ ការអភិវឌ្ឍន៍ស្ដង់ដារ
-                និងការកាត់បន្ថយថ្លៃដើមនៃផ្នែករឹងកុំព្យូទ័របានធ្វើឱ្យផលិតផល និងសេវាកម្មថ្មីៗអាចធ្វើទៅបានដូចជា Apple
-                iPhone,
-                កុំព្យូទ័រថេប្លេត, iTunes, ការផ្សាយតន្ត្រី និងវីដេអូតាមអ៊ីនធឺណិត និងឧស្សាហកម្មមាតិកាអនឡាញទាំងមូល។
-                អាជីវកម្ម
-                និងគំរូអាជីវកម្មថ្មីទាំងស្រុងបានលេចឡើងសម្រាប់ការចែកចាយឌីជីថល តន្ត្រី សៀវភៅ កាសែត វិទ្យុ ទិនានុប្បវត្តិ
-                និងភាពយន្តហូលីវូដ។ Carris ច្បាស់ជាត្រឹមត្រូវក្នុងការបញ្ជាក់ថា មិនមែនរាល់ការវិនិយោគនៅក្នុង IT
-                មានប្រសិទ្ធភាព
-                ឬមានតម្លៃជាយុទ្ធសាស្ត្រនោះទេ។ មួយចំនួនគឺគ្រាន់តែត្រូវការដើម្បីបន្តអាជីវកម្ម
-                ដើម្បីអនុវត្តតាមតម្រូវការរាយការណ៍របស់រដ្ឋាភិបាល និងដើម្បីបំពេញតម្រូវការរបស់អតិថិជន និងអ្នកលក់
-                (ជារឿយៗបង្កើនថ្លៃដើម និងធ្វើឱ្យប្រាក់ចំណេញធ្លាក់ចុះក្នុងរយៈពេលមួយ)។ ដូច្នេះ បាទ មិនមែនរាល់ការវិនិយោគ IT
-                នាំទៅរកគុណសម្បត្តិជាយុទ្ធសាស្ត្រនោះទេ។</p>
-            <p class="article paragraph-one">ប្រហែលជាសំណួរសំខាន់ជាងនៅក្នុងឆ្នាំ 2013 គឺថាតើ IT
-                ធ្វើឱ្យមានភាពខុសប្លែកគ្នាប៉ុន្មាននៅក្នុងឧស្សាហកម្ម និងក្រុមហ៊ុនអ្វី
-                ហើយតើវាអាចដាក់ពង្រាយនៅទីណាបានល្អបំផុតដើម្បីបង្កើតភាពខុសប្លែកគ្នាក្នុងការប្រកួតប្រជែង?
-                ហេតុអ្វីបានជាក្រុមហ៊ុនមួយចំនួនសម្រេចបាននូវគែមយុទ្ធសាស្ត្រជាមួយប្រព័ន្ធព័ត៌មាន ហើយ fi rms ខ្លះមិនមាន?</p>
-            <p class="article paragraph-one">យើងខិតខំប្រឹងប្រែងយ៉ាងសំខាន់នៅក្នុងសៀវភៅនេះ
-                ដើម្បីណែនាំវិធីដែលអ្នកជាអ្នកគ្រប់គ្រង និងសហគ្រិនសក្តានុពលអាចប្រើប្រាស់បច្ចេកវិទ្យាព័ត៌មាន
-                និងប្រព័ន្ធដើម្បីបង្កើតភាពខុសគ្នាពីដៃគូប្រកួតប្រជែងរបស់អ្នក
-                និងអត្ថប្រយោជន៍ជាយុទ្ធសាស្ត្រសម្រាប់ក្រុមហ៊ុនរបស់អ្នកនៅក្នុងទីផ្សារ។ ដូចដែលយើងពណ៌នាទាំងមូល
-                ដើម្បីសម្រេចបាននូវរង្វាស់នៃ "ជោគជ័យ" ការវិនិយោគនៅក្នុង IT
-                ត្រូវតែត្រូវបានអមដោយការផ្លាស់ប្តូរសំខាន់ៗនៅក្នុងប្រតិបត្តិការ និងដំណើរការអាជីវកម្ម
-                និងការផ្លាស់ប្តូរវប្បធម៌
-                អាកប្បកិរិយា និងអាកប្បកិរិយានៃការគ្រប់គ្រង។ ដោយអវត្តមានការផ្លាស់ប្តូរទាំងនេះ
-                ការវិនិយោគលើបច្ចេកវិទ្យាព័ត៌មានអាចជាការខ្ជះខ្ជាយធនធានវិនិយោគដ៏មានតម្លៃ។</p>
+            អ្នកជំនាញប្រព័ន្ធព័ត៌មានគ្រប់គ្រង (MIS) ភាគច្រើនមិនយល់ស្របទេ។ ដូចដែលយើងពិភាក្សានៅពេលក្រោយក្នុងជំពូកនេះ
+            និងជំពូកបន្តបន្ទាប់គ្នាពេញសៀវភៅនេះ
+            ការស្រាវជ្រាវបង្ហាញថាមានភាពប្រែប្រួលគួរឱ្យកត់សម្គាល់នៅក្នុងសមត្ថភាពរបស់
+            fi rms ក្នុងការប្រើប្រាស់ IT ប្រកបដោយប្រសិទ្ធភាព។ rms ដែលមានជំនាញខ្ពស់ជាច្រើន
+            បន្តទទួលបានផលចំណេញខ្ពស់លើការវិនិយោគរបស់ពួកគេក្នុងវិស័យ IT ចំណែកក្រុមហ៊ុនដែលមិនសូវជំនាញមិនមាន។
+            ការចម្លងការបង្កើតថ្មីនៃ fi rms ផ្សេងទៀតអាចជាការពិបាកដ៏អាក្រក់ ដោយមានការខាតបង់យ៉ាងច្រើនក្នុងការបកប្រែ។ Th
+            ere
+            គឺមានតែ Google មួយ Wal-Mart មួយ Amazon និង eBay មួយប៉ុណ្ណោះ ហើយ fi rms
+            នីមួយៗទទួលបានអត្ថប្រយោជន៍ប្រកួតប្រជែងនៅក្នុងឧស្សាហកម្មរបស់ខ្លួនដោយផ្អែកលើផ្នែកធំមួយលើវិធីតែមួយគត់នៃការរៀបចំការងារដែលបើកដោយ
+            IT ដែលត្រូវបានប្រើប្រាស់យ៉ាងខ្លាំង។ ពិបាកចម្លង។ ក្រុមហ៊ុន Firms
+            ដ៏មានឥទ្ធិពលជាច្រើនបានព្យាយាមចម្លងក្រុមហ៊ុនលេចធ្លោនីមួយៗដោយមិនជោគជ័យ។ ប្រសិនបើការចម្លងមានភាពងាយស្រួល
+            យើងនឹងរំពឹងថានឹងស្វែងរកការប្រកួតប្រជែងដ៏មានឥទ្ធិពលសម្រាប់អ្នកដឹកនាំទីផ្សារទាំងនេះ។ វាក៏ជាករណីដែល fi rms
+            ទាំងនេះជារឿយៗបានបរាជ័យក្នុងការផ្លាស់ទីចេញពីផលិតផលពិសេសរបស់ពួកគេដោយការយកតម្រាប់តាមអ្នកដទៃ។</p>
+        <p class="article paragraph-one">អ្នកជំនាញប្រព័ន្ធព័ត៌មានគ្រប់គ្រង (MIS) ភាគច្រើនមិនយល់ស្របទេ។
+            ដូចដែលយើងពិភាក្សានៅពេលក្រោយក្នុងជំពូកនេះ និងជំពូកបន្តបន្ទាប់គ្នាពេញសៀវភៅនេះ
+            ការស្រាវជ្រាវបង្ហាញថាមានភាពប្រែប្រួលគួរឱ្យកត់សម្គាល់នៅក្នុងសមត្ថភាពរបស់ fi rms ក្នុងការប្រើប្រាស់ IT
+            ប្រកបដោយប្រសិទ្ធភាព។ rms ដែលមានជំនាញខ្ពស់ជាច្រើន បន្តទទួលបានផលចំណេញខ្ពស់លើការវិនិយោគរបស់ពួកគេក្នុងវិស័យ
+            IT
+            ចំណែកក្រុមហ៊ុនដែលមិនសូវជំនាញមិនមាន។ ការចម្លងការបង្កើតថ្មីនៃ fi rms ផ្សេងទៀតអាចជាការពិបាកដ៏អាក្រក់
+            ដោយមានការខាតបង់យ៉ាងច្រើនក្នុងការបកប្រែ។ Th ere គឺមានតែ Google មួយ Wal-Mart មួយ Amazon និង eBay
+            មួយប៉ុណ្ណោះ
+            ហើយ fi rms
+            នីមួយៗទទួលបានអត្ថប្រយោជន៍ប្រកួតប្រជែងនៅក្នុងឧស្សាហកម្មរបស់ខ្លួនដោយផ្អែកលើផ្នែកធំមួយលើវិធីតែមួយគត់នៃការរៀបចំការងារដែលបើកដោយ
+            IT ដែលត្រូវបានប្រើប្រាស់យ៉ាងខ្លាំង។ ពិបាកចម្លង។ ក្រុមហ៊ុន Firms
+            ដ៏មានឥទ្ធិពលជាច្រើនបានព្យាយាមចម្លងក្រុមហ៊ុនលេចធ្លោនីមួយៗដោយមិនជោគជ័យ។ ប្រសិនបើការចម្លងមានភាពងាយស្រួល
+            យើងនឹងរំពឹងថានឹងស្វែងរកការប្រកួតប្រជែងដ៏មានឥទ្ធិពលសម្រាប់អ្នកដឹកនាំទីផ្សារទាំងនេះ។ វាក៏ជាករណីដែល fi rms
+            ទាំងនេះជារឿយៗបានបរាជ័យក្នុងការផ្លាស់ទីចេញពីផលិតផលពិសេសរបស់ពួកគេដោយការយកតម្រាប់តាមអ្នកដទៃ។</p>
+        <p class="article paragraph-one">ទោះបីជាការធ្លាក់ចុះតម្លៃសម្រាប់ផ្នែករឹង និងសូហ្វវែរ និងស្តង់ដារកុំព្យូទ័រ
+            និងទូរគមនាគមន៍ថ្មី
+            ដូចជាអ៊ីនធឺណិតបានធ្វើឱ្យកម្មវិធីកុំព្យូទ័រសម្រាប់អាជីវកម្មមានភាពងាយស្រួលជាងពេលមុនក៏ដោយ
+            នេះមិនមែនជាសញ្ញានៃការបញ្ចប់នៃការបង្កើតថ្មី ឬចុងបញ្ចប់នៃក្រុមហ៊ុនដែលកំពុងអភិវឌ្ឍគែមយុទ្ធសាស្ត្រដោយប្រើ IT
+            .
+            ឆ្ងាយពីការបញ្ចប់នៃការបង្កើតថ្មី ការផ្លាស់ប្តូរទំនិញតែងតែនាំទៅរកការផ្ទុះឡើងនៃការបង្កើតថ្មី និងទីផ្សារ
+            និងផលិតផលថ្មី។ ជាឧទាហរណ៍ ភាពសម្បូរបែប និងលទ្ធភាពនៃសម្ភារៈដូចជាឈើ កញ្ចក់ និងដែក
+            ក្នុងអំឡុងសតវត្សចុងក្រោយនេះ
+            បានធ្វើឱ្យមានការបន្តនៃការបង្កើតថ្មីនៃស្ថាបត្យកម្ម។ ដូចគ្នានេះដែរ ភាពអាចរកបានយ៉ាងទូលំទូលាយនៃ cloud
+            computing
+            ក្នុងឆ្នាំ 2013 ដែលជាឧទាហរណ៍ដ៏ល្អនៃការគណនាទំនិញកំពុងនាំទៅដល់ផលិតផល និងសេវាកម្មថ្មីៗរាប់ពាន់។</p>
+        <p class="article paragraph-one">ដូចគ្នានេះដែរ ការអភិវឌ្ឍន៍ស្ដង់ដារ
+            និងការកាត់បន្ថយថ្លៃដើមនៃផ្នែករឹងកុំព្យូទ័របានធ្វើឱ្យផលិតផល និងសេវាកម្មថ្មីៗអាចធ្វើទៅបានដូចជា Apple
+            iPhone,
+            កុំព្យូទ័រថេប្លេត, iTunes, ការផ្សាយតន្ត្រី និងវីដេអូតាមអ៊ីនធឺណិត និងឧស្សាហកម្មមាតិកាអនឡាញទាំងមូល។
+            អាជីវកម្ម
+            និងគំរូអាជីវកម្មថ្មីទាំងស្រុងបានលេចឡើងសម្រាប់ការចែកចាយឌីជីថល តន្ត្រី សៀវភៅ កាសែត វិទ្យុ ទិនានុប្បវត្តិ
+            និងភាពយន្តហូលីវូដ។ Carris ច្បាស់ជាត្រឹមត្រូវក្នុងការបញ្ជាក់ថា មិនមែនរាល់ការវិនិយោគនៅក្នុង IT
+            មានប្រសិទ្ធភាព
+            ឬមានតម្លៃជាយុទ្ធសាស្ត្រនោះទេ។ មួយចំនួនគឺគ្រាន់តែត្រូវការដើម្បីបន្តអាជីវកម្ម
+            ដើម្បីអនុវត្តតាមតម្រូវការរាយការណ៍របស់រដ្ឋាភិបាល និងដើម្បីបំពេញតម្រូវការរបស់អតិថិជន និងអ្នកលក់
+            (ជារឿយៗបង្កើនថ្លៃដើម និងធ្វើឱ្យប្រាក់ចំណេញធ្លាក់ចុះក្នុងរយៈពេលមួយ)។ ដូច្នេះ បាទ មិនមែនរាល់ការវិនិយោគ IT
+            នាំទៅរកគុណសម្បត្តិជាយុទ្ធសាស្ត្រនោះទេ។</p>
+        <p class="article paragraph-one">ប្រហែលជាសំណួរសំខាន់ជាងនៅក្នុងឆ្នាំ 2013 គឺថាតើ IT
+            ធ្វើឱ្យមានភាពខុសប្លែកគ្នាប៉ុន្មាននៅក្នុងឧស្សាហកម្ម និងក្រុមហ៊ុនអ្វី
+            ហើយតើវាអាចដាក់ពង្រាយនៅទីណាបានល្អបំផុតដើម្បីបង្កើតភាពខុសប្លែកគ្នាក្នុងការប្រកួតប្រជែង?
+            ហេតុអ្វីបានជាក្រុមហ៊ុនមួយចំនួនសម្រេចបាននូវគែមយុទ្ធសាស្ត្រជាមួយប្រព័ន្ធព័ត៌មាន ហើយ fi rms ខ្លះមិនមាន?</p>
+        <p class="article paragraph-one">យើងខិតខំប្រឹងប្រែងយ៉ាងសំខាន់នៅក្នុងសៀវភៅនេះ
+            ដើម្បីណែនាំវិធីដែលអ្នកជាអ្នកគ្រប់គ្រង និងសហគ្រិនសក្តានុពលអាចប្រើប្រាស់បច្ចេកវិទ្យាព័ត៌មាន
+            និងប្រព័ន្ធដើម្បីបង្កើតភាពខុសគ្នាពីដៃគូប្រកួតប្រជែងរបស់អ្នក
+            និងអត្ថប្រយោជន៍ជាយុទ្ធសាស្ត្រសម្រាប់ក្រុមហ៊ុនរបស់អ្នកនៅក្នុងទីផ្សារ។ ដូចដែលយើងពណ៌នាទាំងមូល
+            ដើម្បីសម្រេចបាននូវរង្វាស់នៃ "ជោគជ័យ" ការវិនិយោគនៅក្នុង IT
+            ត្រូវតែត្រូវបានអមដោយការផ្លាស់ប្តូរសំខាន់ៗនៅក្នុងប្រតិបត្តិការ និងដំណើរការអាជីវកម្ម
+            និងការផ្លាស់ប្តូរវប្បធម៌
+            អាកប្បកិរិយា និងអាកប្បកិរិយានៃការគ្រប់គ្រង។ ដោយអវត្តមានការផ្លាស់ប្តូរទាំងនេះ
+            ការវិនិយោគលើបច្ចេកវិទ្យាព័ត៌មានអាចជាការខ្ជះខ្ជាយធនធានវិនិយោគដ៏មានតម្លៃ។</p>
     </div>
 
 </body>
