border and line

--- a/blogs.html
+++ b/blogs.html
@@ -79,8 +79,8 @@
             competitors and strategic advantage for your firm in the marketplace. As we describe throughout, to achieve
             any measure of “success,” investment in IT must be accompanied by significant changes in business operations
             and processes and changes in management culture, attitudes, and behavior. Absent these changes, investment
-            in IT can be a waste of precious investor resources. </p>
-        <h1 class="article header">បកប្រែដោយ google translation</h1>
+            in IT can be a waste of precious investor resources. </p><br>
+        <h1 class="article header text-align">បកប្រែដោយ Google Translation</h1><br>
         <h1 class="article header">ករណីទី១៖</h1>
         <h2 class="article center-pre-header">មេរៀនទី១៖ តើ IT សំខាន់ប៉ុណ្ណា?</h2>
         <p class="article paragraph-one">នៅខែឧសភា ឆ្នាំ 2003 លោក Nicholas Carr ដែលជានិពន្ធនាយកនៅ Harvard Business
