change text position to center

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
 
     </div>
     <div class="center-cul">
-        <h1 class="heading" ​​​>សូមស្វាគមន៍មកកាន់គេហទំព័ររបស់យើង</h1>
-        <p class="paragraph">My name is PHalla. I am building this website, it only practice my own study... </p>
+        <h1 class="heading text" ​​​>សូមស្វាគមន៍មកកាន់គេហទំព័ររបស់យើង</h1>
+        <p class="paragraph text">My name is PHalla. I am building this website, it only practice my own study... </p>
     </div>
 </body>
 
