--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="about.css">
     <link href="https://fonts.googleapis.com/css2?family=Dangrek&family=Konkhmer+Sleokchher&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="image/x-icon" href="Image/x-con.jpg">
+    <link rel="icon" type="image/x-icon" href="Image/x-con.jpg">
 </head>
 
 <body>
