--- a/blogs.html
+++ b/blogs.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="blogs.css">
     <link href="https://fonts.googleapis.com/css2?family=Dangrek&family=Konkhmer+Sleokchher&display=swap"
         rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="Image/x-con.jpg">
 </head>
 
 <body>
