--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="center-cul">
             <img class="profile picture" src="image/profile.jpg">
-            <h1 class="heading">"Good Morning" From Hour Phalla</h1>
+            <h1 class="heading" id="headingText-Time">"Good Morning" From Hour Phalla</h1>
             <p class="paragraph">វាលវែងអន្លាយ ឆ្ញាញដូចជើងមេឃ ផ្អែកខ្នងនឹងខ្យល់ ផ្តេកផ្តួលនឹងស្មៅ រះឡើងម្តងម្នាក់
                 ដូចព្រះអាទិត្យនឹងព្រះច័ន្ទ ត្បិតអីសម្លាញ់មានគូរមុនហើយ&#128060&#128059 &#9992....រូបភាព (មានវីដេអូ)</p>
             <div class="center image">
@@ -46,6 +46,8 @@
             <img class="cover-image" src="image/cover_image.jpg">
         </div>
     </div>
+    <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
