extra-product-menu

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
         <a href="index.html">ទំព័រដើម</a>
         <a class="about" href="about.html">អំពីយើង</a>
         <a href="blogs.html">អត្ថបទ</a>
+        <a href="product.html">ផលិតផល</a>
 
     </div>
     <div class="center-cul">
