--- a/blogs.html
+++ b/blogs.html
@@ -17,6 +17,7 @@
         <a href="index.html">ទំព័រដើម</a>
         <a href="about.html">អំពីយើង</a>
         <a class="blogs" href="blogs.html">អត្ថបទ</a>
+        <a href="product.html">ផលិតផល</a>
     </div>
     <div class="center-blogs">
         <h1 class="article header">Case One:</h1>
