--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <a class="home" href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="blogs.html">Blogs</a>
+            <a href="product.html">Product</a>
+
         </div>
         <div class="center-cul">
             <img class="profile picture" src="image/profile.jpg">
